codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__local_daemon_version_notice_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&cell.display_lines(100)).join(\"\\n\")"
---
⚠ A background Codez service is running v0.152.1, older than your Codez CLI v0.153.0.
  Use /daemon to manage the local background server.
  Updating may interrupt active or queued work.
